--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -6,18 +6,31 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "slicemachine": "start-slicemachine"
   },
   "dependencies": {
+    "@prismicio/client": "^7.16.1",
+    "@prismicio/helpers": "^2.3.9",
+    "@prismicio/next": "^2.0.0",
+    "@prismicio/react": "^3.0.0",
+    "framer-motion": "^12.0.6",
+    "lucide-react": "^0.474.0",
+    "motion": "^12.0.6",
+    "next": "^15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.1.5"
+    "react-icon": "^1.0.0",
+    "react-icons": "^5.4.0",
+    "react-intersection-observer": "^9.15.1"
   },
   "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "@eslint/eslintrc": "^3",
+    "@slicemachine/adapter-next": "^0.3.66",
     "eslint": "^9",
     "eslint-config-next": "15.1.5",
-    "@eslint/eslintrc": "^3"
+    "postcss": "^8",
+    "slice-machine-ui": "^2.12.3",
+    "tailwindcss": "^3.4.1"
   }
 }
