--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -14,6 +14,7 @@
     "@prismicio/helpers": "^2.3.9",
     "@prismicio/next": "^2.0.0",
     "@prismicio/react": "^3.0.0",
+    "@vercel/speed-insights": "^1.2.0",
     "framer-motion": "^12.0.6",
     "lucide-react": "^0.474.0",
     "motion": "^12.0.6",
